--- a/index.html
+++ b/index.html
@@ -132,63 +132,75 @@
             padding-top: 100px;
         }
 
-        /* 3D Prism Container */
         .prism-3d-container {
-            position: relative;
-            width: 300px;
-            height: 300px;
-            margin: 0 auto 60px;
+            width: 280px;
+            height: 280px;
             perspective: 1200px;
+            margin-bottom: 80px;
         }
-
         .prism-3d {
-            position: relative;
             width: 100%;
             height: 100%;
+            position: relative;
             transform-style: preserve-3d;
-            animation: prismRotate 25s infinite linear;
+            animation: prismSpin 18s linear infinite;
         }
-
-        @keyframes prismRotate {
-            0% { transform: rotateX(20deg) rotateY(0deg); }
-            100% { transform: rotateX(20deg) rotateY(360deg); }
+        @keyframes prismSpin {
+            from {
+                transform: rotateX(20deg) rotateY(0deg);
+            }
+            to {
+                transform: rotateX(20deg) rotateY(360deg);
+            }
         }
-
-        .prism-facet {
+        .prism-face {
             position: absolute;
-            width: 150px;
-            height: 200px;
+            width: 160px;
+            height: 220px;
             left: 50%;
             top: 50%;
             transform-origin: center center;
-            background: linear-gradient(135deg,
-                rgba(0, 255, 255, 0.15),
-                rgba(255, 0, 255, 0.15),
-                rgba(255, 255, 0, 0.15));
-            border: 1px solid rgba(255, 255, 255, 0.4);
+            clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+            background: linear-gradient(
+                135deg,
+                rgba(0,255,255,0.35),
+                rgba(255,0,255,0.35),
+                rgba(255,255,0,0.35)
+            );
+            border: 1px solid rgba(255,255,255,0.45);
             backdrop-filter: blur(20px);
-            box-shadow: 
-                inset 0 0 40px rgba(255, 255, 255, 0.1),
-                0 0 40px rgba(0, 255, 255, 0.3);
+            box-shadow:
+                0 0 50px rgba(0,255,255,0.35),
+                inset 0 0 30px rgba(255,255,255,0.15);
         }
-
-        .prism-facet:nth-child(1) {
-            transform: translate(-50%, -50%) rotateY(0deg) translateZ(100px);
+        .face-1 {
+            transform: translate(-50%, -50%) rotateY(0deg) translateZ(90px);
         }
-        .prism-facet:nth-child(2) {
-            transform: translate(-50%, -50%) rotateY(60deg) translateZ(100px);
+        .face-2 {
+            transform: translate(-50%, -50%) rotateY(120deg) translateZ(90px);
         }
-        .prism-facet:nth-child(3) {
-            transform: translate(-50%, -50%) rotateY(120deg) translateZ(100px);
+        .face-3 {
+            transform: translate(-50%, -50%) rotateY(240deg) translateZ(90px);
         }
-        .prism-facet:nth-child(4) {
-            transform: translate(-50%, -50%) rotateY(180deg) translateZ(100px);
+        .prism-cap {
+            position: absolute;
+            width: 160px;
+            height: 160px;
+            left: 50%;
+            top: 50%;
+            background: radial-gradient(circle,
+                rgba(255,255,255,0.7),
+                rgba(0,255,255,0.3),
+                transparent
+            );
+            clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+            transform-origin: center;
         }
-        .prism-facet:nth-child(5) {
-            transform: translate(-50%, -50%) rotateY(240deg) translateZ(100px);
+        .prism-cap.top {
+            transform: translate(-50%, -140px) rotateX(90deg);
         }
-        .prism-facet:nth-child(6) {
-            transform: translate(-50%, -50%) rotateY(300deg) translateZ(100px);
+        .prism-cap.bottom {
+            transform: translate(-50%, 60px) rotateX(-90deg);
         }
 
         /* Light beams from prism */
@@ -362,11 +374,11 @@
             }
         }
 
-        /* Tech hexagon nodes */
+        /* Tech nodes como círculos energéticos */
         .tech-node {
             position: absolute;
-            width: 160px;
-            height: 160px;
+            width: 120px;
+            height: 120px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -376,7 +388,8 @@
                 rgba(255, 255, 255, 0.02));
             backdrop-filter: blur(15px);
             border: 1.5px solid rgba(255, 255, 255, 0.3);
-            clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+            border-radius: 50%;
+            clip-path: none;
             box-shadow: 
                 0 8px 32px rgba(0, 0, 0, 0.3),
                 inset 0 0 20px rgba(255, 255, 255, 0.05);
@@ -813,13 +826,15 @@
     <div class="content-wrapper">
         <!-- Hero Section -->
         <section class="hero-section">
-                        <div class="scene">
-                            <div class="prism">
-                                <div class="face front"></div>
-                                <div class="face right"></div>
-                                <div class="face left"></div>
-                            </div>
-                        </div>
+            <div class="prism-3d-container">
+                <div class="prism-3d">
+                    <div class="prism-face face-1"></div>
+                    <div class="prism-face face-2"></div>
+                    <div class="prism-face face-3"></div>
+                    <div class="prism-cap top"></div>
+                    <div class="prism-cap bottom"></div>
+                </div>
+            </div>
             <h1 class="hero-title">PRISM</h1>
             <p class="hero-subtitle">Ideas que cobran forma.</p>
         </section>
@@ -831,16 +846,40 @@
                 <svg class="connections-svg" id="connections" style="z-index:0;"></svg>
                 <div class="tech-core" style="top:50%;left:50%;width:90px;height:90px;"></div>
                 <!-- Java -->
-                <div class="tech-node" style="top:10%;left:50%;width:110px;height:110px;">
-                    <div class="tech-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java" style="width:32px;height:32px;filter:drop-shadow(0 0 8px #fff8);"></div>
+                <div class="tech-node" style="top:20%;left:50%;width:110px;height:110px;">
+                    <div class="tech-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java" style="width:40px;height:40px;filter:drop-shadow(0 0 8px #fff8);"></div>
                     <div class="tech-name">Java</div>
                 </div>
                 <!-- JavaScript -->
-                <div class="tech-node" style="top:25%;left:80%;width:110px;height:110px;">
-                    <div class="tech-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" style="width:32px;height:32px;filter:drop-shadow(0 0 8px #fff8);"></div>
+                <div class="tech-node" style="top:35%;left:75%;width:110px;height:110px;">
+                    <div class="tech-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" style="width:40px;height:40px;filter:drop-shadow(0 0 8px #fff8);"></div>
                     <div class="tech-name">JavaScript</div>
                 </div>
-                <!-- Aquí continúan los demás tech-nodes correctamente... -->
+                <!-- Spring Boot -->
+                <div class="tech-node" style="top:65%;left:80%;width:110px;height:110px;">
+                    <div class="tech-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" alt="Spring Boot" style="width:40px;height:40px;filter:drop-shadow(0 0 8px #fff8);"></div>
+                    <div class="tech-name">Spring Boot</div>
+                </div>
+                <!-- Express -->
+                <div class="tech-node" style="top:85%;left:60%;width:110px;height:110px;">
+                    <div class="tech-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="Express" style="width:40px;height:40px;background:#fff;border-radius:8px;padding:2px;filter:drop-shadow(0 0 8px #fff8);"></div>
+                    <div class="tech-name">Express</div>
+                </div>
+                <!-- Rust -->
+                <div class="tech-node" style="top:85%;left:40%;width:110px;height:110px;">
+                    <div class="tech-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rust/rust-plain.svg" alt="Rust" style="width:40px;height:40px;filter:drop-shadow(0 0 8px #fff8);"></div>
+                    <div class="tech-name">Rust</div>
+                </div>
+                <!-- Django -->
+                <div class="tech-node" style="top:65%;left:20%;width:110px;height:110px;">
+                    <div class="tech-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" alt="Django" style="width:40px;height:40px;filter:drop-shadow(0 0 8px #fff8);background:#fff;border-radius:8px;padding:2px;"></div>
+                    <div class="tech-name">Django</div>
+                </div>
+                <!-- Node.js -->
+                <div class="tech-node" style="top:35%;left:25%;width:110px;height:110px;">
+                    <div class="tech-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js" style="width:40px;height:40px;filter:drop-shadow(0 0 8px #fff8);"></div>
+                    <div class="tech-name">Node.js</div>
+                </div>
             </div>
         </section>
 
